Archive2/b0/e0a2ab1e96be5a/output
In file included from main.cpp:1:
In file included from /usr/local/include/boost/variant.hpp:17:
/usr/local/include/boost/variant/variant.hpp:1494:28: error: no matching member function for call to 'initialize'
              initializer::initialize(
              ~~~~~~~~~~~~~^~~~~~~~~~
/usr/local/include/boost/variant/variant.hpp:1643:9: note: in instantiation of function template specialization 'boost::variant<boost::detail::variant::over_sequence<boost::mpl::v_item<Column<std::basic_string<char> >, boost::mpl::v_item<Column<float>, boost::mpl::v_item<Column<int>, boost::mpl::vector<mpl_::na, mpl_::na, mpl_::na, mpl_::na, mpl_::na, mpl_::na, mpl_::na, mpl_::na, mpl_::na, mpl_::na, mpl_::na, mpl_::na, mpl_::na, mpl_::na, mpl_::na, mpl_::na, mpl_::na, mpl_::na, mpl_::na, mpl_::na>, 0>, 0>, 0> >, boost::detail::variant::void_, boost::detail::variant::void_, boost::detail::variant::void_, boost::detail::variant::void_, boost::detail::variant::void_, boost::detail::variant::void_, boost::detail::variant::void_, boost::detail::variant::void_, boost::detail::variant::void_, boost::detail::variant::void_, boost::detail::variant::void_, boost::detail::variant::void_, boost::detail::variant::void_, boost::detail::variant::void_, boost::detail::variant::void_, boost::detail::variant::void_, boost::detail::variant::void_, boost::detail::variant::void_, boost::detail::variant::void_>::convert_construct<char const[12]>' requested here
        convert_construct(operand, 1L);
        ^
main.cpp:22:70: note: in instantiation of function template specialization 'boost::variant<boost::detail::variant::over_sequence<boost::mpl::v_item<Column<std::basic_string<char> >, boost::mpl::v_item<Column<float>, boost::mpl::v_item<Column<int>, boost::mpl::vector<mpl_::na, mpl_::na, mpl_::na, mpl_::na, mpl_::na, mpl_::na, mpl_::na, mpl_::na, mpl_::na, mpl_::na, mpl_::na, mpl_::na, mpl_::na, mpl_::na, mpl_::na, mpl_::na, mpl_::na, mpl_::na, mpl_::na, mpl_::na>, 0>, 0>, 0> >, boost::detail::variant::void_, boost::detail::variant::void_, boost::detail::variant::void_, boost::detail::variant::void_, boost::detail::variant::void_, boost::detail::variant::void_, boost::detail::variant::void_, boost::detail::variant::void_, boost::detail::variant::void_, boost::detail::variant::void_, boost::detail::variant::void_, boost::detail::variant::void_, boost::detail::variant::void_, boost::detail::variant::void_, boost::detail::variant::void_, boost::detail::variant::void_, boost::detail::variant::void_, boost::detail::variant::void_, boost::detail::variant::void_>::variant<char [12]>' requested here
    make_column_variant<mpl::vector<int, float, std::string> >::type v("hello world");
                                                                     ^
/usr/local/include/boost/variant/detail/initializer.hpp:104:24: note: candidate function not viable: no known conversion from 'char const[12]' to 'const Column<int>' for 2nd argument
            static int initialize(void* dest, param_T operand)
                       ^
/usr/local/include/boost/variant/detail/initializer.hpp:104:24: note: candidate function not viable: no known conversion from 'char const[12]' to 'const Column<float>' for 2nd argument
            static int initialize(void* dest, param_T operand)
                       ^
/usr/local/include/boost/variant/detail/initializer.hpp:104:24: note: candidate function not viable: no known conversion from 'char const[12]' to 'const Column<std::basic_string<char> >' for 2nd argument
            static int initialize(void* dest, param_T operand)
                       ^
/usr/local/include/boost/variant/detail/initializer.hpp:115:24: note: candidate function not viable: no known conversion from 'char const[12]' to 'Column<int>' for 2nd argument
            static int initialize(void* dest, param2_T operand)
                       ^
/usr/local/include/boost/variant/detail/initializer.hpp:115:24: note: candidate function not viable: no known conversion from 'char const[12]' to 'Column<float>' for 2nd argument
            static int initialize(void* dest, param2_T operand)
                       ^
/usr/local/include/boost/variant/detail/initializer.hpp:115:24: note: candidate function not viable: no known conversion from 'char const[12]' to 'Column<std::basic_string<char> >' for 2nd argument
            static int initialize(void* dest, param2_T operand)
                       ^
/usr/local/include/boost/variant/detail/initializer.hpp:149:17: note: candidate function not viable: requires 0 arguments, but 2 were provided
    static void initialize();
                ^
1 error generated.
